# rine

./: .gitignore  Cargo.toml  README.md  distribution.md  thumbnailer.md
crates/platform/win-common/rine-common-comdlg32/: Cargo.toml
crates/platform/win-common/rine-common-comdlg32/src/: core.rs  env_policy.rs  error.rs  lib.rs  open.rs  pick.rs  save.rs  telemetry.rs
crates/platform/win-common/rine-common-ntdll/: Cargo.toml
crates/platform/win-common/rine-common-ntdll/src/: file.rs  lib.rs  process.rs  rtl.rs
crates/platform/win32-dll/rine32-advapi32/: Cargo.toml
crates/platform/win32-dll/rine32-advapi32/src/: lib.rs  registry.rs
crates/platform/win32-dll/rine32-comdlg32/: Cargo.toml
crates/platform/win32-dll/rine32-comdlg32/src/: error.rs  lib.rs  open.rs  save.rs
crates/platform/win32-dll/rine32-gdi32/: Cargo.toml
crates/platform/win32-dll/rine32-gdi32/src/: lib.rs  ops.rs
crates/platform/win32-dll/rine32-kernel32/: Cargo.toml
crates/platform/win32-dll/rine32-kernel32/src/: console.rs  date_time.rs  environment.rs  file.rs  lib.rs  locale.rs  memory.rs  process.rs  profile.rs  strings.rs  sync.rs  thread.rs  version.rs
crates/platform/win32-dll/rine32-msvcrt/: Cargo.toml  build.rs
crates/platform/win32-dll/rine32-msvcrt/src/: crt_init.rs  crt_support.rs  data_cells.rs  lib.rs  math.rs  memory.rs  stdio.rs  stdlib.rs  string.rs
crates/platform/win32-dll/rine32-ntdll/: Cargo.toml
crates/platform/win32-dll/rine32-ntdll/src/: file.rs  lib.rs  process.rs  rtl.rs
crates/platform/win32-dll/rine32-shell32/: Cargo.toml  build.rs
crates/platform/win32-dll/rine32-shell32/src/: dialogs.rs  lib.rs  window.rs
crates/platform/win32-dll/rine32-user32/: Cargo.toml  build.rs
crates/platform/win32-dll/rine32-user32/src/: class_registration.rs  clipboard.rs  cursor.rs  dialogs.rs  lib.rs  menu.rs  message_queue.rs  message_registration.rs  window_lifecycle.rs  window_text.rs
crates/platform/win64-dll/rine64-advapi32/: Cargo.toml
crates/platform/win64-dll/rine64-advapi32/src/: lib.rs  registry.rs
crates/platform/win64-dll/rine64-comdlg32/: Cargo.toml
crates/platform/win64-dll/rine64-comdlg32/src/: error.rs  lib.rs  open.rs  save.rs
crates/platform/win64-dll/rine64-gdi32/: Cargo.toml
crates/platform/win64-dll/rine64-gdi32/src/: lib.rs  ops.rs  state.rs
crates/platform/win64-dll/rine64-kernel32/: Cargo.toml
crates/platform/win64-dll/rine64-kernel32/src/: console.rs  date_time.rs  environment.rs  file.rs  lib.rs  locale.rs  memory.rs  process.rs  profile.rs  strings.rs  sync.rs  thread.rs  version.rs
crates/platform/win64-dll/rine64-msvcrt/: Cargo.toml
crates/platform/win64-dll/rine64-msvcrt/src/: crt_init.rs  crt_support.rs  data_cells.rs  lib.rs  math.rs  memory.rs  stdio.rs  stdlib.rs  string.rs
crates/platform/win64-dll/rine64-ntdll/: Cargo.toml
crates/platform/win64-dll/rine64-ntdll/src/: file.rs  lib.rs  memory.rs  process.rs  rtl.rs
crates/platform/win64-dll/rine64-shell32/: Cargo.toml
crates/platform/win64-dll/rine64-shell32/src/: dialogs.rs  lib.rs  window.rs
crates/platform/win64-dll/rine64-user32/: Cargo.toml
crates/platform/win64-dll/rine64-user32/src/: backend.rs  class_registration.rs  clipboard.rs  cursor.rs  dialogs.rs  lib.rs  menu.rs  message_queue.rs  message_registration.rs  window_lifecycle.rs  window_text.rs
crates/rine/: Cargo.toml
crates/rine-channel/: Cargo.toml
crates/rine-channel/src/: lib.rs  receiver.rs  sender.rs  window_host.rs
crates/rine-config/: Cargo.toml  build.rs  tauri.conf.json
crates/rine-config/src/: commands.rs  file_kind.rs  lib.rs  main.rs  registry_ui.rs  relaunch.rs
crates/rine-dev/: Cargo.toml  build.rs  tauri.conf.json
crates/rine-dev-bridge/: Cargo.toml
crates/rine-dev-bridge/src/: lib.rs
crates/rine-dev/capabilities/: default.json
crates/rine-dev/src/: lib.rs  main.rs
crates/rine-dlls/: Cargo.toml
crates/rine-dlls/src/: dynamic_provider.rs  lib.rs  registry.rs
crates/rine-dlls/src/advapi32/: mod.rs
crates/rine-dlls/src/gdi32/: mod.rs
crates/rine-dlls/src/kernel32/: console.rs  file.rs  memory.rs  mod.rs  process.rs  sync.rs  thread.rs
crates/rine-dlls/src/msvcrt/: crt_init.rs  memory.rs  mod.rs  stdio.rs  stdlib.rs
crates/rine-dlls/src/ntdll/: file.rs  mod.rs  process.rs  rtl.rs
crates/rine-dlls/src/user32/: mod.rs
crates/rine-dlls/src/ws2_32/: mod.rs
crates/rine-runtime-core/: Cargo.toml
crates/rine-runtime-core/src/: lib.rs
crates/rine-runtime-core/src/loader/: entry.rs  memory.rs  resolver.rs
crates/rine-runtime-core/src/pe/: parser.rs
crates/rine-runtime-core/tests/: import_policy.rs
crates/rine-thumbnailer-cli/: Cargo.toml
crates/rine-thumbnailer-cli/src/: main.rs
crates/rine-thumbnailer-core/: Cargo.toml
crates/rine-thumbnailer-core/src/: icon_decode.rs  icon_select.rs  lib.rs  pe_resources.rs
crates/rine-thumbnailer-core/src/tests/: mod.rs  pe_builder.rs
crates/rine-types/: Cargo.toml
crates/rine-types/src/: config.rs  date_time.rs  dev_hooks.rs  environment.rs  errors.rs  handles.rs  lib.rs  locale.rs  memory.rs  os.rs  registry.rs  strings.rs  structs.rs  sync.rs  threading.rs  windows.rs
crates/rine/.cargo/: config.toml
crates/rine/src/: cli.rs  main.rs
crates/rine/src/commands/: binfmt.rs  config.rs  context_menu.rs  desktop.rs  mod.rs  run.rs  window_host.rs
crates/rine/src/compat/: client.rs  mod.rs  search.rs
crates/rine/src/config/: dirs.rs  errors.rs  manager.rs  mod.rs  schema.rs
crates/rine/src/integration/: binfmt.rs  context_menu.rs  desktop.rs  errors.rs  mod.rs
crates/rine/src/loader/: entry.rs  memory.rs  mod.rs  resolver.rs
crates/rine/src/pe/: mod.rs  parser.rs  probe.rs
crates/rine/src/subsys/: dialogs.rs  environment.rs  filesystem.rs  heap.rs  mod.rs  process.rs  registry.rs  sync.rs  threading.rs  version.rs
crates/rine/tests/: integration.rs
crates/rine/tests/integration/: common.rs  core.rs  dispatch.rs  errors.rs  system.rs  ui.rs
crates/rine/tests/integration/core/: basic.rs  cmdline.rs  io.rs  lifecycle.rs  (+2 more)
crates/rine32/: Cargo.toml
crates/rine32/src/: main.rs
(+139 files in other folders)
