[workspace]
resolver = "3"
members = [
    "crates/rine",
    "crates/rine-dlls",
    "crates/rine-types",
    "crates/rine-config",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
rine-dlls = { path = "crates/rine-dlls" }
rine-types = { path = "crates/rine-types" }
goblin = "0.10"
nix = { version = "0.29", features = ["mman", "signal", "fs", "process"] }
libc = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
memmap2 = "0.9"
bitflags = "2"
thiserror = "2"
