[workspace]
resolver = "3"
members = [
    "crates/rine",
    "crates/rine-dlls",
    "crates/rine-types",
    "crates/rine-config",
    "crates/platform/win64-dll/rine64-kernel32",
    "crates/platform/win64-dll/rine64-msvcrt",
    "crates/platform/win64-dll/rine64-ntdll",
    "crates/platform/win64-dll/rine64-advapi32",
    "crates/platform/win64-dll/rine64-gdi32",
    "crates/platform/win64-dll/rine64-user32",
    "crates/platform/win64-dll/rine64-ws2_32",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
rine-dlls = { path = "crates/rine-dlls" }
rine-types = { path = "crates/rine-types" }
rine64-kernel32 = { path = "crates/platform/win64-dll/rine64-kernel32" }
rine64-msvcrt = { path = "crates/platform/win64-dll/rine64-msvcrt" }
rine64-ntdll = { path = "crates/platform/win64-dll/rine64-ntdll" }
rine64-advapi32 = { path = "crates/platform/win64-dll/rine64-advapi32" }
rine64-gdi32 = { path = "crates/platform/win64-dll/rine64-gdi32" }
rine64-user32 = { path = "crates/platform/win64-dll/rine64-user32" }
rine64-ws2_32 = { path = "crates/platform/win64-dll/rine64-ws2_32" }
goblin = "0.10"
nix = { version = "0.29", features = ["mman", "signal", "fs", "process"] }
libc = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"
tracing = "0.1"
tracing-subscriber = "0.3"
memmap2 = "0.9"
bitflags = "2"
thiserror = "2"
serial_test = "3"
