[workspace]
resolver = "3"
members = [
    "crates/rine",
    "crates/rine32",
    "crates/rine-dev-bridge",
    "crates/rine-runtime-core",
    "crates/rine-dlls",
    "crates/rine-dll-build",
    "crates/rine-types",
    "crates/rine-config",
    "crates/rine-channel",
    "crates/rine-dev",
    "crates/rine-frontend-common",
    "crates/platform/win64-dll/rine64-kernel32",
    "crates/platform/win64-dll/rine64-msvcrt",
    "crates/platform/win64-dll/rine64-ntdll",
    "crates/platform/win64-dll/rine64-advapi32",
    "crates/platform/win64-dll/rine64-gdi32",
    "crates/platform/win64-dll/rine64-comdlg32",
    "crates/platform/win64-dll/rine64-user32",
    "crates/platform/win64-dll/rine64-ws2_32",
    "crates/platform/win-common/rine-common-advapi32",
    "crates/platform/win-common/rine-common-comdlg32",
    "crates/platform/win-common/rine-common-gdi32",
    "crates/platform/win-common/rine-common-kernel32",
    "crates/platform/win-common/rine-common-ntdll",
    "crates/platform/win-common/rine-common-msvcrt",
    "crates/platform/win-common/rine-common-user32",
    "crates/platform/win-common/rine-common-ws2_32",
    "crates/platform/win32-dll/rine32-advapi32",
    "crates/platform/win32-dll/rine32-kernel32",
    "crates/platform/win32-dll/rine32-comdlg32",
    "crates/platform/win32-dll/rine32-gdi32",
    "crates/platform/win32-dll/rine32-msvcrt",
    "crates/platform/win32-dll/rine32-ntdll",
    "crates/platform/win32-dll/rine32-user32",
    "crates/platform/win32-dll/rine32-ws2_32",
]
default-members = [
    "crates/rine",
    "crates/rine-dlls",
    "crates/rine-types",
    "crates/rine-config",
    "crates/rine-channel",
    "crates/rine-dev",
    "crates/rine-frontend-common",
    "crates/platform/win64-dll/rine64-kernel32",
    "crates/platform/win64-dll/rine64-msvcrt",
    "crates/platform/win64-dll/rine64-ntdll",
    "crates/platform/win64-dll/rine64-advapi32",
    "crates/platform/win64-dll/rine64-gdi32",
    "crates/platform/win64-dll/rine64-comdlg32",
    "crates/platform/win64-dll/rine64-user32",
    "crates/platform/win64-dll/rine64-ws2_32",
]

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "MIT"

[workspace.dependencies]
rine-dll-build = { path = "crates/rine-dll-build" }
rine-dlls = { path = "crates/rine-dlls" }
rine-types = { path = "crates/rine-types" }
rine-channel = { path = "crates/rine-channel" }
rine-dev-bridge = { path = "crates/rine-dev-bridge" }
rine-runtime-core = { path = "crates/rine-runtime-core" }
rine-frontend-common = { path = "crates/rine-frontend-common" }
rine64-kernel32 = { path = "crates/platform/win64-dll/rine64-kernel32" }
rine64-msvcrt = { path = "crates/platform/win64-dll/rine64-msvcrt" }
rine64-ntdll = { path = "crates/platform/win64-dll/rine64-ntdll" }
rine64-advapi32 = { path = "crates/platform/win64-dll/rine64-advapi32" }
rine64-gdi32 = { path = "crates/platform/win64-dll/rine64-gdi32" }
rine64-comdlg32 = { path = "crates/platform/win64-dll/rine64-comdlg32" }
rine64-user32 = { path = "crates/platform/win64-dll/rine64-user32" }
rine64-ws2_32 = { path = "crates/platform/win64-dll/rine64-ws2_32" }
rine-common-advapi32 = { path = "crates/platform/win-common/rine-common-advapi32" }
rine-common-comdlg32 = { path = "crates/platform/win-common/rine-common-comdlg32" }
rine-common-gdi32 = { path = "crates/platform/win-common/rine-common-gdi32" }
rine-common-kernel32 = { path = "crates/platform/win-common/rine-common-kernel32" }
rine-common-ntdll = { path = "crates/platform/win-common/rine-common-ntdll" }
rine-common-msvcrt = { path = "crates/platform/win-common/rine-common-msvcrt" }
rine-common-user32 = { path = "crates/platform/win-common/rine-common-user32" }
rine-common-ws2_32 = { path = "crates/platform/win-common/rine-common-ws2_32" }
rine32-advapi32 = { path = "crates/platform/win32-dll/rine32-advapi32" }
rine32-kernel32 = { path = "crates/platform/win32-dll/rine32-kernel32" }
rine32-comdlg32 = { path = "crates/platform/win32-dll/rine32-comdlg32" }
rine32-gdi32 = { path = "crates/platform/win32-dll/rine32-gdi32" }
rine32-msvcrt = { path = "crates/platform/win32-dll/rine32-msvcrt" }
rine32-ntdll = { path = "crates/platform/win32-dll/rine32-ntdll" }
rine32-user32 = { path = "crates/platform/win32-dll/rine32-user32" }
rine32-ws2_32 = { path = "crates/platform/win32-dll/rine32-ws2_32" }
goblin = "0.10.5"
nix = { version = "0.31.2", features = ["mman", "signal", "fs", "process"] }
libc = "0.2.185"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
memmap2 = "0.9.10"
bitflags = "2.11.1"
thiserror = "2.0.18"
syn = { version = "2.0.117", features = ["full"] }
serial_test = "3.4.0"
rfd = "0.17.2"
tauri = { version = "2.10.3", features = [] }
tauri-build = { version = "2.5.6", features = [] }
