[package]
name = "rine-channel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and IPC channel for rine-dev communication"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rine-types = { workspace = true, features = ["serde"] }
