[package]
name = "rine-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri-based configuration editor for rine"

[dependencies]
rine-types = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

# Tauri will be added when the GUI is implemented
# tauri = { version = "2", features = [] }
