[package]
name = "rine-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri-based configuration editor for rine"

[lib]
name = "rine_config_lib"
path = "src/lib.rs"

[[bin]]
name = "rine-config"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rine-types = { workspace = true, features = ["config"] }
serde = { workspace = true }
serde_json = "1"
toml = { workspace = true }
tauri = { version = "2", features = [] }
