[package]
name = "rine-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri-based configuration editor for rine"

[lib]
name = "rine_config_lib"
path = "src/lib.rs"

[[bin]]
name = "rine-config"
path = "src/main.rs"

[build-dependencies]
rine-frontend-common = { workspace = true }
tauri-build = { workspace = true }

[dependencies]
rine-types = { workspace = true, features = ["config"] }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tauri = { workspace = true }
