[package]
name = "rine-dev"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Real-time developer dashboard for rine"

[lib]
name = "rine_dev_lib"
path = "src/lib.rs"

[[bin]]
name = "rine-dev"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rine-channel = { path = "../rine-channel" }
serde = { workspace = true }
serde_json = "1"
tauri = { version = "2", features = [] }
