[package]
name = "rine-dev"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Real-time developer dashboard for rine"

[lib]
name = "rine_dev_lib"
path = "src/lib.rs"

[[bin]]
name = "rine-dev"
path = "src/main.rs"

[build-dependencies]
rine-frontend-common = { workspace = true }
tauri-build = { workspace = true }

[dependencies]
rine-channel = { path = "../rine-channel" }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
