[package]
name = "rine-dlls"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reimplemented Windows DLLs in Rust for rine"

[dependencies]
rine-types = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
bitflags = { workspace = true }
