[package]
name = "rine32"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "32-bit Windows PE runtime launcher for rine"

[dependencies]
clap = { workspace = true }
goblin = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
rine-dlls = { workspace = true }
rine-channel = { workspace = true }
rine-dev-bridge = { workspace = true }
rine-types = { workspace = true, features = ["config"] }
rine-runtime-core = { workspace = true }
rine32-kernel32 = { workspace = true }
rine32-comdlg32 = { workspace = true }
rine32-msvcrt = { workspace = true }
rine32-ntdll = { workspace = true }
