[package]
name = "rine-common-comdlg32"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared architecture-neutral comdlg32 logic for rine"

[dependencies]
rine-types = { workspace = true }

[target.'cfg(target_pointer_width = "64")'.dependencies]
rfd = { workspace = true }