[package]
name = "rine-common-ntdll"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared architecture-neutral ntdll logic for rine"

[dependencies]
rine-types = { workspace = true }
rine-dlls = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
