[package]
name = "rine32-comdlg32"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Win32 comdlg32 export plugin scaffold"

[dependencies]
rine-dlls = { workspace = true }
rine-types = { workspace = true }
rine-common-comdlg32 = { workspace = true }
rfd = { workspace = true }
