[package]
name = "rine32-gdi32"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gdi32.dll implementation for rine32"
build = "build.rs"

[dependencies]
rine-dlls = { workspace = true }
rine-types = { workspace = true }
rine-common-gdi32 = { workspace = true }

[build-dependencies]
rine-dll-build = { workspace = true }
