[package]
name = "rine32-kernel32"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Win32 kernel32 export plugin scaffold"

[dependencies]
rine-dlls = { workspace = true }
rine-types = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
