[package]
name = "rine32-kernel32"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Win32 kernel32 export plugin scaffold"
build = "build.rs"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rine-dlls = { workspace = true }
rine-common-kernel32 = { workspace = true }
rine-types = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
rine-dll-build = { workspace = true }
