[package]
name = "rine32-msvcrt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Win32 msvcrt export plugin scaffold"
build = "build.rs"

[dependencies]
rine-dlls = { workspace = true }
rine-types = { workspace = true }
rine-common-msvcrt = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
rine-dll-build = { workspace = true }
