[package]
name = "rine32-user32"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "user32.dll implementation for rine32"
build = "build.rs"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rine-dlls = { workspace = true }
rine-types = { workspace = true }
rine-common-user32 = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
rine-dll-build = { workspace = true }
