[package]
name = "rine64-advapi32"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "advapi32.dll implementation for rine"
build = "build.rs"

[dependencies]
rine-dlls = { workspace = true }
rine-types = { workspace = true }
rine-common-advapi32 = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
rine-dll-build = { workspace = true }
