[package]
name = "rine64-comdlg32"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "comdlg32.dll implementation for rine"
build = "build.rs"

[dependencies]
rine-dlls = { workspace = true }
rine-types = { workspace = true }
rine-common-comdlg32 = { workspace = true }

[build-dependencies]
rine-dll-build = { workspace = true }
