[package]
name = "rine64-kernel32"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "kernel32.dll implementation for rine"

[dependencies]
rine-dlls = { workspace = true }
rine-common-kernel32 = { workspace = true }
rine-types = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
