[package]
name = "rine64-msvcrt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "msvcrt.dll implementation for rine"
build = "build.rs"

[dependencies]
rine-dlls = { workspace = true }
rine-types = { workspace = true }
rine-common-msvcrt = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
rine-dll-build = { workspace = true }
