[package]
name = "rine64-ntdll"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ntdll.dll implementation for rine"

[dependencies]
rine-dlls = { workspace = true }
rine-types = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
