[package]
name = "rine64-ntdll"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ntdll.dll implementation for rine"
build = "build.rs"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rine-dlls = { workspace = true }
rine-common-ntdll = { workspace = true }
rine-types = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }

[build-dependencies]
rine-dll-build = { workspace = true }
