[package]
name = "rine64-user32"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "user32.dll implementation for rine"
build = "build.rs"

[dependencies]
rine-dlls = { workspace = true }
rine-types = { workspace = true }
rine-common-user32 = { workspace = true }
winit = "0.28.7"
tracing = {workspace = true }

[build-dependencies]
rine-dll-build = { workspace = true }
